Made autotools check for boost

--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -4796,6 +4796,18 @@ fi
 
 done
  #we should just be able to check the graphics lib
+for ac_header in boost/any.hpp
+do :
+  ac_fn_cxx_check_header_mongrel "$LINENO" "boost/any.hpp" "ac_cv_header_boost_any_hpp" "$ac_includes_default"
+if test "x$ac_cv_header_boost_any_hpp" = xyes; then :
+  cat >>confdefs.h <<_ACEOF
+@%:@define HAVE_BOOST_ANY_HPP 1
+_ACEOF
+ 
+fi
+
+done
+ # check for the parts of boost we need
 
 # Checks for typedefs, structures, and compiler characteristics.
 { $as_echo "$as_me:${as_lineno-$LINENO}: checking for stdbool.h that conforms to C99" >&5
