--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -404,71 +404,75 @@ m4trace:configure.ac:26: -1- AH_OUTPUT([HAVE_SFML_GRAPHICS_HPP], [/* Define to 1
 @%:@undef HAVE_SFML_GRAPHICS_HPP])
 m4trace:configure.ac:26: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SFML_GRAPHICS_HPP])
 m4trace:configure.ac:26: -1- m4_pattern_allow([^HAVE_SFML_GRAPHICS_HPP$])
-m4trace:configure.ac:29: -1- AC_DEFINE_TRACE_LITERAL([HAVE__BOOL])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^HAVE__BOOL$])
-m4trace:configure.ac:29: -1- AH_OUTPUT([HAVE__BOOL], [/* Define to 1 if the system has the type `_Bool\'. */
+m4trace:configure.ac:27: -1- AH_OUTPUT([HAVE_BOOST_ANY_HPP], [/* Define to 1 if you have the <boost/any.hpp> header file. */
+@%:@undef HAVE_BOOST_ANY_HPP])
+m4trace:configure.ac:27: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_ANY_HPP])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^HAVE_BOOST_ANY_HPP$])
+m4trace:configure.ac:30: -1- AC_DEFINE_TRACE_LITERAL([HAVE__BOOL])
+m4trace:configure.ac:30: -1- m4_pattern_allow([^HAVE__BOOL$])
+m4trace:configure.ac:30: -1- AH_OUTPUT([HAVE__BOOL], [/* Define to 1 if the system has the type `_Bool\'. */
 @%:@undef HAVE__BOOL])
-m4trace:configure.ac:30: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or `__inline\' if that\'s what the C compiler
+m4trace:configure.ac:31: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or `__inline\' if that\'s what the C compiler
    calls it, or to nothing if \'inline\' is not supported under any name.  */
 #ifndef __cplusplus
 #undef inline
 #endif])
-m4trace:configure.ac:31: -1- AC_DEFINE_TRACE_LITERAL([int32_t])
-m4trace:configure.ac:31: -1- m4_pattern_allow([^int32_t$])
-m4trace:configure.ac:31: -1- AH_OUTPUT([int32_t], [/* Define to the type of a signed integer type of width exactly 32 bits if
+m4trace:configure.ac:32: -1- AC_DEFINE_TRACE_LITERAL([int32_t])
+m4trace:configure.ac:32: -1- m4_pattern_allow([^int32_t$])
+m4trace:configure.ac:32: -1- AH_OUTPUT([int32_t], [/* Define to the type of a signed integer type of width exactly 32 bits if
    such a type exists and the standard includes do not define it. */
 @%:@undef int32_t])
-m4trace:configure.ac:32: -1- AC_DEFINE_TRACE_LITERAL([size_t])
-m4trace:configure.ac:32: -1- m4_pattern_allow([^size_t$])
-m4trace:configure.ac:32: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
+m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([size_t])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^size_t$])
+m4trace:configure.ac:33: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
 @%:@undef size_t])
-m4trace:configure.ac:35: -1- AC_LIBSOURCE([error.h])
-m4trace:configure.ac:35: -1- AC_LIBSOURCE([error.c])
-m4trace:configure.ac:35: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS error.$ac_objext"])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:35: -1- AC_LIBSOURCE([error.c])
-m4trace:configure.ac:36: -1- AC_SUBST([POW_LIB])
-m4trace:configure.ac:36: -1- AC_SUBST_TRACE([POW_LIB])
-m4trace:configure.ac:36: -1- m4_pattern_allow([^POW_LIB$])
-m4trace:configure.ac:36: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS strtod.$ac_objext"])
+m4trace:configure.ac:36: -1- AC_LIBSOURCE([error.h])
+m4trace:configure.ac:36: -1- AC_LIBSOURCE([error.c])
+m4trace:configure.ac:36: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS error.$ac_objext"])
 m4trace:configure.ac:36: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:36: -1- AC_LIBSOURCE([strtod.c])
-m4trace:configure.ac:37: -1- AH_OUTPUT([HAVE_MEMMOVE], [/* Define to 1 if you have the `memmove\' function. */
+m4trace:configure.ac:36: -1- AC_LIBSOURCE([error.c])
+m4trace:configure.ac:37: -1- AC_SUBST([POW_LIB])
+m4trace:configure.ac:37: -1- AC_SUBST_TRACE([POW_LIB])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^POW_LIB$])
+m4trace:configure.ac:37: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS strtod.$ac_objext"])
+m4trace:configure.ac:37: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:37: -1- AC_LIBSOURCE([strtod.c])
+m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_MEMMOVE], [/* Define to 1 if you have the `memmove\' function. */
 @%:@undef HAVE_MEMMOVE])
-m4trace:configure.ac:37: -1- AH_OUTPUT([HAVE_MEMSET], [/* Define to 1 if you have the `memset\' function. */
+m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_MEMSET], [/* Define to 1 if you have the `memset\' function. */
 @%:@undef HAVE_MEMSET])
-m4trace:configure.ac:37: -1- AH_OUTPUT([HAVE_POW], [/* Define to 1 if you have the `pow\' function. */
+m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_POW], [/* Define to 1 if you have the `pow\' function. */
 @%:@undef HAVE_POW])
-m4trace:configure.ac:37: -1- AH_OUTPUT([HAVE_SQRT], [/* Define to 1 if you have the `sqrt\' function. */
+m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_SQRT], [/* Define to 1 if you have the `sqrt\' function. */
 @%:@undef HAVE_SQRT])
-m4trace:configure.ac:37: -1- AH_OUTPUT([HAVE_STRTOL], [/* Define to 1 if you have the `strtol\' function. */
+m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_STRTOL], [/* Define to 1 if you have the `strtol\' function. */
 @%:@undef HAVE_STRTOL])
-m4trace:configure.ac:39: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.ac:40: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:40: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:40: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:40: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:40: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:40: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:40: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:40: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:40: -1- AC_CONFIG_FILES([Makefile])
+m4trace:configure.ac:41: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:41: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:41: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:41: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:41: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:41: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:41: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:41: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:41: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:41: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:41: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:41: -1- AC_SUBST_TRACE([MKDIR_P])
