--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,3 +1,4 @@
+m4trace:configure.ac:4: -1- AC_PREREQ([2.69])
 m4trace:configure.ac:5: -1- AC_INIT([bullwhip], [1.0], [stuff@stuff.com])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
@@ -147,6 +148,7 @@ m4trace:configure.ac:5: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE
+m4trace:configure.ac:6: -1- AC_PREREQ([2.62])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.12.1])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
@@ -180,6 +182,7 @@ m4trace:configure.ac:6: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.ac:6: -1- AH_OUTPUT([VERSION], [/* Version number of package */
 @%:@undef VERSION])
+m4trace:configure.ac:6: -1- AC_PREREQ([2.50])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([missing])
 m4trace:configure.ac:6: -1- AC_SUBST([ACLOCAL])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([ACLOCAL])
@@ -228,6 +231,7 @@ m4trace:configure.ac:6: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.ac:8: -1- AC_CONFIG_HEADERS([config.h])
+m4trace:configure.ac:11: -1- AC_PROG_CXX
 m4trace:configure.ac:11: -1- AC_SUBST([CXX])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([CXX])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^CXX$])
@@ -265,6 +269,7 @@ m4trace:configure.ac:11: -1- AC_SUBST([am__quote])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([am__quote])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:11: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.ac:11: -1- AC_PREREQ([2.52])
 m4trace:configure.ac:11: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([AMDEP_TRUE])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^AMDEP_TRUE$])
@@ -287,6 +292,7 @@ m4trace:configure.ac:11: -1- m4_pattern_allow([^CXXDEPMODE$])
 m4trace:configure.ac:11: -1- AM_CONDITIONAL([am__fastdepCXX], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CXX_dependencies_compiler_type" = gcc3])
+m4trace:configure.ac:11: -1- AC_PREREQ([2.52])
 m4trace:configure.ac:11: -1- AC_SUBST([am__fastdepCXX_TRUE])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
@@ -295,6 +301,7 @@ m4trace:configure.ac:11: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
 m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
 m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:12: -1- AC_PROG_CC
 m4trace:configure.ac:12: -1- AC_SUBST([CC])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([CC])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^CC$])
@@ -331,6 +338,7 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^CCDEPMODE$])
 m4trace:configure.ac:12: -1- AM_CONDITIONAL([am__fastdepCC], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
+m4trace:configure.ac:12: -1- AC_PREREQ([2.52])
 m4trace:configure.ac:12: -1- AC_SUBST([am__fastdepCC_TRUE])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([am__fastdepCC_TRUE])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
@@ -355,6 +363,7 @@ m4trace:configure.ac:20: -1- AH_OUTPUT([HAVE_LIBSFML_GRAPHICS], [/* Define to 1 
 @%:@undef HAVE_LIBSFML_GRAPHICS])
 m4trace:configure.ac:20: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBSFML_GRAPHICS])
 m4trace:configure.ac:20: -1- m4_pattern_allow([^HAVE_LIBSFML_GRAPHICS$])
+m4trace:configure.ac:24: -1- AC_CHECK_HEADERS([wchar.h])
 m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_WCHAR_H], [/* Define to 1 if you have the <wchar.h> header file. */
 @%:@undef HAVE_WCHAR_H])
 m4trace:configure.ac:24: -1- AC_SUBST([CXXCPP])
@@ -376,6 +385,8 @@ m4trace:configure.ac:24: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^STDC_HEADERS$])
 m4trace:configure.ac:24: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
 @%:@undef STDC_HEADERS])
+m4trace:configure.ac:24: -1- AC_CHECK_HEADERS([sys/types.h sys/stat.h stdlib.h string.h memory.h strings.h \
+		  inttypes.h stdint.h unistd.h], [], [], [$ac_includes_default])
 m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
 @%:@undef HAVE_SYS_TYPES_H])
 m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
@@ -396,42 +407,51 @@ m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you h
 @%:@undef HAVE_UNISTD_H])
 m4trace:configure.ac:24: -1- AC_DEFINE_TRACE_LITERAL([HAVE_WCHAR_H])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^HAVE_WCHAR_H$])
+m4trace:configure.ac:25: -1- AC_CHECK_HEADERS([Box2D/Box2D.h])
 m4trace:configure.ac:25: -1- AH_OUTPUT([HAVE_BOX2D_BOX2D_H], [/* Define to 1 if you have the <Box2D/Box2D.h> header file. */
 @%:@undef HAVE_BOX2D_BOX2D_H])
 m4trace:configure.ac:25: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOX2D_BOX2D_H])
 m4trace:configure.ac:25: -1- m4_pattern_allow([^HAVE_BOX2D_BOX2D_H$])
+m4trace:configure.ac:26: -1- AC_CHECK_HEADERS([SFML/Graphics.hpp])
 m4trace:configure.ac:26: -1- AH_OUTPUT([HAVE_SFML_GRAPHICS_HPP], [/* Define to 1 if you have the <SFML/Graphics.hpp> header file. */
 @%:@undef HAVE_SFML_GRAPHICS_HPP])
 m4trace:configure.ac:26: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SFML_GRAPHICS_HPP])
 m4trace:configure.ac:26: -1- m4_pattern_allow([^HAVE_SFML_GRAPHICS_HPP$])
+m4trace:configure.ac:27: -1- AC_CHECK_HEADERS([boost/any.hpp])
 m4trace:configure.ac:27: -1- AH_OUTPUT([HAVE_BOOST_ANY_HPP], [/* Define to 1 if you have the <boost/any.hpp> header file. */
 @%:@undef HAVE_BOOST_ANY_HPP])
 m4trace:configure.ac:27: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_ANY_HPP])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^HAVE_BOOST_ANY_HPP$])
+m4trace:configure.ac:30: -1- AC_CHECK_HEADER_STDBOOL
 m4trace:configure.ac:30: -1- AC_DEFINE_TRACE_LITERAL([HAVE__BOOL])
 m4trace:configure.ac:30: -1- m4_pattern_allow([^HAVE__BOOL$])
 m4trace:configure.ac:30: -1- AH_OUTPUT([HAVE__BOOL], [/* Define to 1 if the system has the type `_Bool\'. */
 @%:@undef HAVE__BOOL])
+m4trace:configure.ac:31: -1- AC_C_INLINE
 m4trace:configure.ac:31: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or `__inline\' if that\'s what the C compiler
    calls it, or to nothing if \'inline\' is not supported under any name.  */
 #ifndef __cplusplus
 #undef inline
 #endif])
+m4trace:configure.ac:32: -1- AC_TYPE_INT32_T
 m4trace:configure.ac:32: -1- AC_DEFINE_TRACE_LITERAL([int32_t])
 m4trace:configure.ac:32: -1- m4_pattern_allow([^int32_t$])
 m4trace:configure.ac:32: -1- AH_OUTPUT([int32_t], [/* Define to the type of a signed integer type of width exactly 32 bits if
    such a type exists and the standard includes do not define it. */
 @%:@undef int32_t])
+m4trace:configure.ac:33: -1- AC_TYPE_SIZE_T
 m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([size_t])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^size_t$])
 m4trace:configure.ac:33: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
 @%:@undef size_t])
+m4trace:configure.ac:36: -1- AC_FUNC_ERROR_AT_LINE
 m4trace:configure.ac:36: -1- AC_LIBSOURCE([error.h])
 m4trace:configure.ac:36: -1- AC_LIBSOURCE([error.c])
 m4trace:configure.ac:36: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS error.$ac_objext"])
 m4trace:configure.ac:36: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:36: -1- AC_LIBSOURCE([error.c])
+m4trace:configure.ac:37: -1- AC_FUNC_STRTOD
 m4trace:configure.ac:37: -1- AC_SUBST([POW_LIB])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([POW_LIB])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^POW_LIB$])
@@ -439,6 +459,7 @@ m4trace:configure.ac:37: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS strtod.$ac_o
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:37: -1- AC_LIBSOURCE([strtod.c])
+m4trace:configure.ac:38: -1- AC_CHECK_FUNCS([memmove memset pow sqrt strtol])
 m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_MEMMOVE], [/* Define to 1 if you have the `memmove\' function. */
 @%:@undef HAVE_MEMMOVE])
 m4trace:configure.ac:38: -1- AH_OUTPUT([HAVE_MEMSET], [/* Define to 1 if you have the `memset\' function. */
@@ -457,6 +478,7 @@ m4trace:configure.ac:41: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
 m4trace:configure.ac:41: -1- AC_SUBST_TRACE([LTLIBOBJS])
 m4trace:configure.ac:41: -1- m4_pattern_allow([^LTLIBOBJS$])
 m4trace:configure.ac:41: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:41: -1- AC_PREREQ([2.52])
 m4trace:configure.ac:41: -1- AC_SUBST([am__EXEEXT_TRUE])
 m4trace:configure.ac:41: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
 m4trace:configure.ac:41: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
